# duck_math_py

./: .gitignore  README.md  pyproject.toml  requirements.txt
